Finished user management
- Añadido componente de obras favoritos.
-Modificado el management de usuarios.

--- a/frontend/CyberArtwork/src/app/artwork/favorite-artworks/favorite-artworks.component.html
+++ b/frontend/CyberArtwork/src/app/artwork/favorite-artworks/favorite-artworks.component.html
@@ -1,4 +1,4 @@
-<app-artwork-container title="Artworks">
+<app-artwork-container title="Favorite Artworks">
     @if (isFetching()){
         <p class="fallback-text">Cargando obras de arte...</p>
     }
