--- a/frontend/CyberArtwork/src/app/header/header.component.html
+++ b/frontend/CyberArtwork/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <img src="assets/header-image.png" alt="Cyber Artwork Logo">
     <div class="heads">
         <h1 class="Tittle "data-text="CYBER ARTWORK">CYBER ARTWORK</h1>
-        <p>Trayendote el arte por y para todos.</p>        
+        <p>{{headerSubText}}</p>        
     </div>
     <div class="Buttons">
     @if (!user) {
